    - The MIBC technology has been moved from logistics science to py science pack 2.
    - [space-age] Decreased the base richness of quartz ore in order to account for the new scaling resource drain rate in the crystal mine.
    - The casting unit now has an inbuilt loader. Works with belt stacking technologies.
    - Adjusted the limestone recipe. Reduced speed by 4x and increased output by 4x. This is effectively the same recipe however the new ratio is more friendly to belt stacking with stack inserters.
---------------------------------------------------------------------------------------------------
Version: 3.0.6
Date: 2024-11-15
  Changes:
    - Salt mines no longer requires gas canisters can consume fuel directly.
    - Greatly increased the fuel consumption of the salt mine from 800kW to 20MW.
    - Increased the number of module slots in the salt mine 1 -> 5.
    - Added light flicker effects to the salt mine.
    - Diluted the effects of green modules on the salt mine by a factor of 9x.
---------------------------------------------------------------------------------------------------
Version: 3.0.5
Date: 2024-11-14
  Changes:
    - Fixed vechicle impact sounds were missing due to 2.0 migration.
---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: 2024-11-9
  Changes:
    - Native Flora now spoils into Native Floridaman.
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: 2024-11-7
  Changes:
    - Made most crafting machines flippable
    - Added Ukrainian translation (by bootseller)
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: 2024-10-29
  Changes:
    - Fixed nuclear research technology.
    - Improved the quality of the ores
---------------------------------------------------------------------------------------------------
Version: 3.0.1